update to jekyll

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 ---
 
-  <h2>Main Page</h2>
-
-  Main content goes here. 
+{% include main-section.html %}
+{% include features-section.html %}
+{% include portfolio-section.html %}
+{% include client-section.html %}
+{% include team-section.html %}
+{% include contact-section.html %}
